--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: libmaxminddb
 Section: net
 Priority: optional
-Maintainer: Faidon Liambotis <paravoid@debian.org>
-Uploaders: Sergio Durigan Junior <sergiodj@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Faidon Liambotis <paravoid@debian.org>
+XSBC-Pexip-Original-Uploaders: Sergio Durigan Junior <sergiodj@debian.org>
 Build-Depends:
  debhelper-compat (= 13),
  perl <!nodoc !nocheck>,
@@ -18,6 +19,7 @@ Homepage: https://maxmind.github.io/libmaxminddb/
 Vcs-Browser: https://salsa.debian.org/debian/libmaxminddb
 Vcs-Git: https://salsa.debian.org/debian/libmaxminddb.git
 Rules-Requires-Root: no
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ bullseye
 
 Package: libmaxminddb0
 Section: libs
