Import Upstream version 1.7.1

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
 
-    - run: sudo apt install libipc-run3-perl libfile-slurp-perl libfile-which-perl pandoc
+    - run: sudo apt install libipc-run3-perl libipc-system-simple-perl libfile-slurp-perl libfile-which-perl pandoc
     - run: |
             ./bootstrap
             ./configure
