--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -4,6 +4,10 @@ AM_LDFLAGS = $(top_builddir)/src/libmaxminddb.la
 
 bin_PROGRAMS = mmdblookup
 
+if WINDOWS
+AM_LDFLAGS += -municode
+endif
+
 if !WINDOWS
 AM_CPPFLAGS += -pthread
 AM_LDFLAGS += -pthread
