--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,10 @@ lib_LTLIBRARIES = libmaxminddb.la
 libmaxminddb_la_SOURCES = maxminddb.c maxminddb-compat-util.h \
 	data-pool.c data-pool.h
 libmaxminddb_la_LDFLAGS = -version-info 0:7:0 -export-symbols-regex '^MMDB_.*'
+if WINDOWS
+libmaxminddb_la_LDFLAGS += -no-undefined
+endif
+
 include_HEADERS = $(top_srcdir)/include/maxminddb.h
 
 pkgconfig_DATA = libmaxminddb.pc
